--- a/sass/extra.scss
+++ b/sass/extra.scss
@@ -15,3 +15,17 @@
     background-repeat: no-repeat;
     height: 80vh;
 }
+
+.container_page_standard{
+    background-image: url(../img/fondo.jpg);
+    background-size: 100% 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+.views-row{
+    h3{
+        color: aliceblue;
+        background-color: rgba(0, 0, 0, 0.7);
+        font-family: 'Squada One', regular;
+    }
+}
