--- a/templates/views/views-view-unformatted.html.twig
+++ b/templates/views/views-view-unformatted.html.twig
@@ -15,13 +15,14 @@
  * @see template_preprocess_views_view_unformatted()
  */
 #}
+
 {% if title %}
-  <h3>{{ title }}</h3>
+  <h5>{{ title }}</h5>
 {% endif %}
 {% for row in rows %}
   {%
     set row_classes = [
-      default_row_class ? 'views-row',
+      default_row_class ? 'views-row col-lg-5 p-5 mx-1 ',
     ]
   %}
   <div{{ row.attributes.addClass(row_classes) }}>
