Adding about, correcting submenu

--- a/css/extra.css
+++ b/css/extra.css
@@ -21,10 +21,21 @@
   background-size: 100% 100%;
   background-position: center center;
   background-repeat: no-repeat;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-bottom: 7vh;
 }
 
 .views-row h3 {
   color: aliceblue;
   background-color: rgba(0, 0, 0, 0.7);
   font-family: "Squada One", regular;
+}
+
+.menu_child {
+  color: rgb(44, 44, 44);
+}
+.menu_child a {
+  color: rgb(44, 44, 44);
 }/*# sourceMappingURL=extra.css.map */
