--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -5,12 +5,13 @@
       <div class="col-sm-auto">{{page.primary_menu}}</div>
     </div>
   </header>
-  <section class="row pb-5 container_page_standard">
-    <div class="d-flex flex-center my-5">
-      {{page.content}}
+  <section class="row justify-content-center container_page_standard">
+    <div class="col-12 ">
+    <div class="row justify-content-center">{{page.content}}</div>
+      
     </div>
   </section>
-  <footer class="fixed-bottom">  
+  <footer class="row">  
     <div class="bg-dark text-light p-4 ">     
           {{page.footer}}
     </div>
