--- a/templates/views/views-view.html.twig
+++ b/templates/views/views-view.html.twig
@@ -62,7 +62,7 @@
   {% endif %}
 
   {% if rows %}
-    <div class="view-content row">
+    <div class="view-content row justify-content-center">
       {{ rows }}
     </div>
   {% elseif empty %}
